# k-write-ocr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: dataset_here.md
docs/: story.md
specs/: korean-ocr-model.md
src/: codec.py  constants.py  data_loader.py  main.py  net.py
src/commands/: data.py  preprocess.py  train.py
src/common/: F.py  multi_layer_net.py  multi_layer_net_extend.py  nn.py  optimizer.py  util.py
src/model/: label_file.py
