[project]
name = "k-write-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pyfiglet>=1.0.4",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "yaspin>=3.3.0",
]

[tool.black]
line-length = 120